--- a/kosmetyki/serum-rozswietlajace.html
+++ b/kosmetyki/serum-rozswietlajace.html
@@ -68,7 +68,7 @@
                 Serum Rozświetlające Rosebeauty
             </h1>
 
-            <img src="/dist/img/tubes.jpg" alt="serum rozświetlające marki xyz" data-aos="fade-up" data-aos-delay="200">
+            <img src="../dist/img/tubes.jpg" alt="serum rozświetlające marki xyz" data-aos="fade-up" data-aos-delay="200">
 
             <div class="cosmetic__box" data-aos="fade-up" data-aos-delay="300">
                 <div class="cosmetic__box-texts">
