--- a/kosmetyki/krem-nawilzajacy.html
+++ b/kosmetyki/krem-nawilzajacy.html
@@ -66,7 +66,7 @@
         <div class="wrapper">
             <h1 class="section__title-h1" data-aos="fade-up" data-aos-delay="100">Krem Nawilżający Rosebeauty</h1>
             
-            <img src="/dist/img/tube.jpg" alt="krem nawilżający marki xyz" data-aos="fade-up" data-aos-delay="200">
+            <img src="../dist/img/tube.jpg" alt="krem nawilżający marki xyz" data-aos="fade-up" data-aos-delay="200">
             
             <div class="cosmetic__box" data-aos="fade-up" data-aos-delay="300">
                 <div class="cosmetic__box-texts">
