--- a/kosmetyki/tonik-oczyszczajacy.html
+++ b/kosmetyki/tonik-oczyszczajacy.html
@@ -26,105 +26,110 @@
 
 <body>
     <div id="cookie-banner" class="cookie-banner" role="dialog" aria-modal="true" aria-label="Zgoda na pliki cookies">
-    <div class="cookie-banner__wrapper">
-        <p class="cookie-banner__text">
-            Strona korzysta z plików cookies, aby zapewnić najlepszą jakość usług.
-            <a href="polityka-prywatności.html" class="cookie-banner__link">Dowiedz się więcej</a>.
-        </p>
-        <div class="cookie-banner__buttons">
-            <button id="accept-cookies" class="cookie-banner__btn cookie-banner__btn--accept">Akceptuję</button>
-            <button id="reject-cookies" class="cookie-banner__btn cookie-banner__btn--reject">Odrzucam</button>
+        <div class="cookie-banner__wrapper">
+            <p class="cookie-banner__text">
+                Strona korzysta z plików cookies, aby zapewnić najlepszą jakość usług.
+                <a href="polityka-prywatności.html" class="cookie-banner__link">Dowiedz się więcej</a>.
+            </p>
+            <div class="cookie-banner__buttons">
+                <button id="accept-cookies" class="cookie-banner__btn cookie-banner__btn--accept">Akceptuję</button>
+                <button id="reject-cookies" class="cookie-banner__btn cookie-banner__btn--reject">Odrzucam</button>
+            </div>
         </div>
     </div>
-</div>
     <nav class="nav">
-    <div class="wrapper flex-center">
+        <div class="wrapper flex-center">
 
-        <div class="nav__items">
-            <a href="../index.html#opinions" class="nav__items-link">Opinie</a>
-            <a href="../index.html#about-us" class="nav__items-link">O nas</a>
-            <a href="../kosmetyki.html" class="nav__items-link">Kosmetyki</a>
-            <a href="../index.html#contact" class="nav__items-link">Kontakt</a>
+            <div class="nav__items">
+                <a href="../index.html#opinions" class="nav__items-link">Opinie</a>
+                <a href="../index.html#about-us" class="nav__items-link">O nas</a>
+                <a href="../kosmetyki.html" class="nav__items-link">Kosmetyki</a>
+                <a href="../index.html#contact" class="nav__items-link">Kontakt</a>
+            </div>
         </div>
+    </nav>
+    <div class="burger-btn-wrapper">
+        <button class="burger-btn" aria-expanded="false" aria-label="Otwórz menu nawigacji">
+            <div class="burger-btn__box">
+                <div class="burger-btn__bars"></div>
+            </div>
+        </button>
     </div>
-</nav>
-<div class="burger-btn-wrapper">
-    <button class="burger-btn" aria-expanded="false" aria-label="Otwórz menu nawigacji">
-        <div class="burger-btn__box">
-            <div class="burger-btn__bars"></div>
-        </div>
-    </button>
-</div>
-<div class="logo-wrapper">
-    <a href="../index.html" aria-label="Przejdź na stronę główną" class="nav__company-logo-link">
-        <img src="../dist/img/logo.png" alt="Logo Rosebeauty" class="nav__company-logo-img" />
-    </a>
-</div>
+    <div class="logo-wrapper">
+        <a href="../index.html" aria-label="Przejdź na stronę główną" class="nav__company-logo-link">
+            <img src="../dist/img/logo.png" alt="Logo Rosebeauty" class="nav__company-logo-img" />
+        </a>
+    </div>
     <main class="main">
-    <div class="section cosmetic" data-aos="fade-in">
+        <div class="section cosmetic" data-aos="fade-in">
+            <div class="wrapper">
+                <h1 class="section__title-h1" data-aos="fade-up" data-aos-delay="100">
+                    Tonik Oczyszczający Rosebeauty
+                </h1>
+
+                <img src="../dist/img/cream.jpg" alt="tonik oczyszczający marki xyz" data-aos="fade-up"
+                    data-aos-delay="200">
+
+                <div class="cosmetic__box" data-aos="fade-up" data-aos-delay="300">
+                    <div class="cosmetic__box-texts">
+                        <p class="cosmetic__box-texts-text" data-aos="fade-up" data-aos-delay="400">
+                            Delikatne oczyszczenie i odświeżenie skóry, które przygotowuje ją na kolejne etapy
+                            pielęgnacji.
+                        </p>
+                        <ul class="cosmetic__box-texts-list">
+                            <li data-aos="fade-up" data-aos-delay="500"><i class="fas fa-check-circle"></i> Usuwa
+                                zanieczyszczenia i nadmiar sebum</li>
+                            <li data-aos="fade-up" data-aos-delay="600"><i class="fas fa-check-circle"></i> Zawiera
+                                ekstrakt
+                                z rumianku i aloesu łagodzący podrażnienia</li>
+                            <li data-aos="fade-up" data-aos-delay="700"><i class="fas fa-check-circle"></i> Przywraca
+                                naturalne pH skóry</li>
+                            <li data-aos="fade-up" data-aos-delay="800"><i class="fas fa-check-circle"></i> Odpowiedni
+                                do
+                                codziennego stosowania</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <a href="../index.html#contact" class="cosmetic__button" aria-label="Przejdź do sekcji kontakt"
+                    data-aos="fade-up" data-aos-delay="900">
+                    Odwiedź nasz sklep
+                </a>
+            </div>
+        </div>
+    </main>
+    <footer class="footer" data-aos="fade" data-aos-delay="100">
+        <div class="logo-wrapper">
+
+            <div class="footer__top-box flex-center">
+                <img src="../dist/img/logo.png" alt="Logo Rosebeauty" class="footer__top-box-logo" />
+                <h2 class="footer__top-box-title">rosebeauty</h2>
+            </div>
+        </div>
         <div class="wrapper">
-            <h1 class="section__title-h1" data-aos="fade-up" data-aos-delay="100">
-                Tonik Oczyszczający Rosebeauty
-            </h1>
-
-            <img src="/dist/img/cream.jpg" alt="tonik oczyszczający marki xyz" data-aos="fade-up" data-aos-delay="200">
-
-            <div class="cosmetic__box" data-aos="fade-up" data-aos-delay="300">
-                <div class="cosmetic__box-texts">
-                    <p class="cosmetic__box-texts-text" data-aos="fade-up" data-aos-delay="400">
-                        Delikatne oczyszczenie i odświeżenie skóry, które przygotowuje ją na kolejne etapy pielęgnacji.
-                    </p>
-                    <ul class="cosmetic__box-texts-list">
-                        <li data-aos="fade-up" data-aos-delay="500"><i class="fas fa-check-circle"></i> Usuwa
-                            zanieczyszczenia i nadmiar sebum</li>
-                        <li data-aos="fade-up" data-aos-delay="600"><i class="fas fa-check-circle"></i> Zawiera ekstrakt
-                            z rumianku i aloesu łagodzący podrażnienia</li>
-                        <li data-aos="fade-up" data-aos-delay="700"><i class="fas fa-check-circle"></i> Przywraca
-                            naturalne pH skóry</li>
-                        <li data-aos="fade-up" data-aos-delay="800"><i class="fas fa-check-circle"></i> Odpowiedni do
-                            codziennego stosowania</li>
-                    </ul>
+            <div class="footer__items">
+                <div class="footer__links">
+                    <a href="../index.html" class="footer__items-link"
+                        aria-label="Przejdź na stronę główną"><span>Home</span></a>
+                    <a href="../index.html#opinions" class="footer__items-link"><span>Opinie</span></a>
+                    <a href="../index.html#about-us" class="footer__items-link"><span>O nas</span></a>
+                    <a href="../kosmetyki.html" class="footer__items-link"><span>Kosmetyki</span></a>
+                    <a href="../index.html#contact" class="footer__items-link"><span>Kontakt</span></a>
+                    <a href="../polityka-prywatności.html" class="footer__items-link"><span>Polityka
+                            prywatności</span></a>
                 </div>
             </div>
-
-            <a href="../index.html#contact" class="cosmetic__button" aria-label="Przejdź do sekcji kontakt"
-                data-aos="fade-up" data-aos-delay="900">
-                Odwiedź nasz sklep
-            </a>
-        </div>
-    </div>
-</main>
-    <footer class="footer" data-aos="fade" data-aos-delay="100">
-    <div class="logo-wrapper">
-
-        <div class="footer__top-box flex-center">
-            <img src="../dist/img/logo.png" alt="Logo Rosebeauty" class="footer__top-box-logo" />
-            <h2 class="footer__top-box-title">rosebeauty</h2>
-        </div>
-    </div>
-    <div class="wrapper">
-        <div class="footer__items">
-            <div class="footer__links">
-                <a href="../index.html" class="footer__items-link"
-                    aria-label="Przejdź na stronę główną"><span>Home</span></a>
-                <a href="../index.html#opinions" class="footer__items-link"><span>Opinie</span></a>
-                <a href="../index.html#about-us" class="footer__items-link"><span>O nas</span></a>
-                <a href="../kosmetyki.html" class="footer__items-link"><span>Kosmetyki</span></a>
-                <a href="../index.html#contact" class="footer__items-link"><span>Kontakt</span></a>
-                <a href="../polityka-prywatności.html" class="footer__items-link"><span>Polityka prywatności</span></a>
+            <div class="footer__icons-box">
+                <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-square-x-twitter"></i></a>
+            </div>
+            <div class="footer__bottom-box">
+                <p class="footer__bottom-box-title"><span class="footer__year"></span> &copy; rosebeauty </p>
+                <p class="footer__bottom-box-text">Naturalna pielęgnacja z klasą</p>
             </div>
         </div>
-        <div class="footer__icons-box">
-            <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
-            <a href="#"><i class="fa-brands fa-square-x-twitter"></i></a>
-        </div>
-        <div class="footer__bottom-box">
-            <p class="footer__bottom-box-title"><span class="footer__year"></span> &copy; rosebeauty </p>
-            <p class="footer__bottom-box-text">Naturalna pielęgnacja z klasą</p>
-        </div>
-    </div>
-</footer>
+    </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="../dist/js/main-sites.min.js"></script>
 </body>
